--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for="name">Name</label>
+		<input type="text" id="name" required>
+		<br>
+		<label for="email">Email</label>
+		<input type="email" id="email" required>
+		<br>
+		<label for="m_gender">Male</label>
+		<input type="radio" name="gender" id="m_gender" required>
+		<label for="f_gender">Female</label>
+		<input type="radio" name="gender" id="f_gender" required>
+		<br>
+		<label for="cars">Car Brands</label>
+		<select id="cars">
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+		<br>
+		<lable for="carage">Car Age</lable>
+		<input type="number" id="carage" required>
+		<br>
+		<label for="dop">Date</label>
+		<input type="date" id="dop" required>
+		<br>
+		<label for="password">Password</label>
+		<input type="password" id="password">
+		<button type="submit">Submit</button>
+		
+		
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
