--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form>
+	<form method="post">
 		<label for="name">Name</label>
 		<input type="text" id="name" required>
 		<br>
@@ -34,7 +34,7 @@
 		<input type="date" id="dop" required>
 		<br>
 		<label for="password">Password</label>
-		<input type="password" id="password">
+		<input type="password" id="password" required>
 		<button type="submit">Submit</button>
 		
 		
