--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 			<option>Mercedez</option>
 		</select>
 		<br>
-		<lable for="carage">Car Age</lable>
+		<label for="carage">Car Age</label>
 		<input type="number" id="carage" required>
 		<br>
 		<label for="dop">Date</label>
